--- a/app/views/pages/upload_instructions.html.erb
+++ b/app/views/pages/upload_instructions.html.erb
@@ -35,6 +35,9 @@
       <li class="nav-item">
         <a class="nav-link dark-link" href="#aviationpilotlogbook">Avaition Pilot Logbook (Android App)</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link dark-link" href="#smartlogbook">Smart Logbook (Android App)</a>
+      </li>
     </ul>
 
     <a name="basics"></a>
@@ -146,7 +149,7 @@
         Once you have that file, just click "Add Flights" on this website and select Safelog.
       </p>
       <p>
-        Send me a message if you know how to export Safelog logbooks so I can update this section.
+        Send me <a href="http://m.me/arelplane" target="_blank">a message</a> if you know how to export Safelog logbooks so I can update this section.
       </p>
     </div>
 
@@ -164,7 +167,7 @@
         Once you have that file, just click "Add Flights" on this website and select ZuluLog.
       </p>
       <p>
-        Send me a message if you know how to export ZuluLog logbooks so I can update this section.
+        Send me <a href="http://m.me/arelplane" target="_blank">a message</a> if you know how to export ZuluLog logbooks so I can update this section.
       </p>
     </div>
 
@@ -195,7 +198,7 @@
         Once you have that file, just click "Add Flights" on this website and select Logbook Pro.
       </p>
       <p>
-        Send me a message if you know how to export Logbook Pro logbooks so I can update this section.
+        Send me <a href="http://m.me/arelplane" target="_blank">a message</a> if you know how to export Logbook Pro logbooks so I can update this section.
       </p>
     </div>
 
@@ -213,7 +216,7 @@
         Once you have that file, just click "Add Flights" on this website and select FlyLogio.
       </p>
       <p>
-        Send me a message if you know how to export FlyLogio logbooks so I can update this section.
+        Send me <a href="http://m.me/arelplane" target="_blank">a message</a> if you know how to export FlyLogio logbooks so I can update this section.
       </p>
     </div>
 
@@ -231,7 +234,25 @@
         Once you have that file, just click "Add Flights" on this website and select Avation Pilot Logbook.
       </p>
       <p>
-        Send me a message if you know how to export Avation Pilot Logbook logbooks so I can update this section.
+        Send me <a href="http://m.me/arelplane" target="_blank">a message</a> if you know how to export Avation Pilot Logbook logbooks so I can update this section.
+      </p>
+    </div>
+
+    <hr>
+    <a name="smartlogbook"></a>
+    <h4><%= image_tag 'smartlogbook.png'%>Smart Logbook (Android App)</h4>
+    <div class="ml-5">
+      <p>
+        Download a <b>.csv</b> file from Smart Logbook. The filename will look like this:
+      </p>
+      <p>
+        "<b>logbook_2018-10-09_180040.csv</b>"
+      </p>
+      <p>
+        Once you have that file, just click "Add Flights" on this website and select Smart Logbook.
+      </p>
+      <p>
+        Send me <a href="http://m.me/arelplane" target="_blank">a message</a> if you know how to export Avation Pilot Logbook logbooks so I can update this section.
       </p>
     </div>
   </div>
