--- a/app/views/flights/_logbook_upload_modal.html.erb
+++ b/app/views/flights/_logbook_upload_modal.html.erb
@@ -39,6 +39,8 @@
         <%= render 'flights/select_lb_provider', name: 'PilotPro' %>
         <!-- Aviation Pilot Logbook -->
         <%= render 'flights/select_lb_provider', name: 'Aviation Pilot Logbook' %>
+        <!-- Smart Logbook -->
+        <%= render 'flights/select_lb_provider', name: 'Smart Logbook' %>
         <!-- Manual -->
         <div class='row mb-2 ml-2 mr-md-2 h-100'>
           <div class="col-1">
