fix broken get started button

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,7 +6,7 @@
           <h1 class="headline">
             Visualize and share your flights
           </h1>
-          <button type="button" class="btn-outline-light btn-lg">
+          <button type="button" class="btn btn-outline-light btn-lg">
             <a href="#" data-toggle='modal' data-target='#loginOrRegisterModal'>
               Get Started
             </a>
