--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,6 +1,6 @@
 Hello, Arel here from Arelplane. 👋 Thanks for joining, and welcome!
 
-Arelplane is a community of pilots. Feel free to look around at other pilots' pages, and if you see something cool, let the pilot know by liking their map.
+Arelplane is a community of pilots. Feel free to look around at other pilots' pages, and if you see something cool, let the pilot know by following them, liking their post, or leaving a comment.
 
 On a personal note, I'm a pilot working on Arelplane when on the ground. I'm always looking for ways to make Arelplane more helpful and fun, so if you have any ideas, send me a message [http://m.me/arelplane] or reply to this email.
 
