--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -16,6 +16,20 @@
       <p>Info out of date?</p>
       <p><%= link_to 'Edit Location', edit_location_path(@location.identifier) %></p>
 
+      <% if current_user.role == "admin" %>
+        <b>Current Version:</b> <%= @location.paper_trail.live? %>
+        <hr>
+        <% @location.versions.each do |version| %>
+          <b>Event:</b> <%= version.event %><br>
+          <b>User:</b> <%= User.find(version.whodunnit).name if version.whodunnit %><br>
+          <b>Version Number:</b> <%= version.index + 1 %><br>
+          <b>Changes:</b> <% version.changeset.each do |change| %><br>
+            <b><%= change[0].titlecase %>:</b> from: <%= change[1][0] %> to: <%= change[1][1] %>
+          <% end %>
+          <hr>
+        <% end %>
+      <% end %>
+
     </div>
     <div class='col-1'></div>
   </div>
