--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -24,13 +24,14 @@
             <div class="col-6">
               <b>Event:</b> <%= version.event %><br>
               <b>User:</b> <%= User.find(version.whodunnit).name if version.whodunnit %><br>
-              <b>Version Number:</b> <%= version.index + 1 %><br>
+              <b>Version Number:</b> <%= version.id %><br>
               <b>Changes:</b> <% version.changeset.each do |change| %><br>
                 <b><%= change[0].titlecase %>:</b> from: <%= change[1][0] %> to: <%= change[1][1] %>
               <% end %>
             </div>
             <div class="col-6">
-              <%= link_to 'Revert to this version', select_version_location_path(@location.identifier, version: version.index + 2), method: :post %>
+              <%= link_to 'Approve', select_version_location_path(@location.identifier, version: version.id + 1), method: :post %><br>
+              <%= link_to 'Deny', destroy_version_location_path(@location.identifier, version: version.id), method: :delete, data: {confirm: 'Are you sure?'}, remote: true, class: 'delete_version' %>
             </div>
           </div>
         <% end %>
