--- a/app/views/location_mailer/update_submitted.html.erb
+++ b/app/views/location_mailer/update_submitted.html.erb
@@ -1,3 +1,3 @@
 <p>Hey</p>
 
-<p><%= link_to @location.name, location_path(@location.identifier) %> (<%= @location.identifier %>) was updated, go approve it.</p>
+<p><%= link_to @location.name, location_url(@location.identifier) %> (<%= @location.identifier %>) was updated, go approve it.</p>
