--- a/app/views/location_mailer/update_submitted.text.erb
+++ b/app/views/location_mailer/update_submitted.text.erb
@@ -1,3 +1,3 @@
 Hey -
 
-<%= link_to @location.name, location_path(@location.identifier) %>) was updated, go approve it.
+<%= link_to @location.name, location_url(@location.identifier) %>) was updated, go approve it.
