--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -5,7 +5,7 @@
 
       <ul>
       <% location.errors.full_messages.each do |message| %>
-        <li><b><%= message %>blarg</b></li>
+        <li><b><%= message %></b></li>
       <% end %>
       </ul>
     </div>
@@ -13,7 +13,9 @@
 
   <div class="field">
     <%= form.label :identifier %>
-    <%= form.text_field :identifier, id: :location_id %>
+    <%= form.text_field :identifier %><br>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
   </div>
 
   <div class="actions">
