--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -19,18 +19,18 @@
       <% if current_user.role == "admin" %>
         <b>Current Version:</b> <%= @location.paper_trail.live? %>
         <% @location.versions.each do |version| %>
-        <hr>
+          <hr>
           <div class="row">
             <div class="col-6">
               <b>Event:</b> <%= version.event %><br>
               <b>User:</b> <%= User.find(version.whodunnit).name if version.whodunnit %><br>
               <b>Version Number:</b> <%= version.id %><br>
               <b>Changes:</b> <% version.changeset.each do |change| %><br>
-                <b><%= change[0].titlecase %>:</b> from: <%= change[1][0] %> to: <%= change[1][1] %>
+                <b><%= change[0].titlecase %>:</b> from: <%= change[1][1] %> to: <%= change[1][0] %>
               <% end %>
             </div>
             <div class="col-6">
-              <%= link_to 'Approve', select_version_location_path(@location.identifier, version: version.id + 1), method: :post %><br>
+              <%= link_to 'Approve', select_version_location_path(@location.identifier, version: version.id), method: :post %><br>
               <%= link_to 'Deny', destroy_version_location_path(@location.identifier, version: version.id), method: :delete, data: {confirm: 'Are you sure?'}, remote: true, class: 'delete_version' %>
             </div>
           </div>
