change ad unit from arelplane group to patreon page

--- a/app/views/users/home_page/_notice_unit.html.erb
+++ b/app/views/users/home_page/_notice_unit.html.erb
@@ -1,5 +1,5 @@
 <div class="alert alert-info" role="alert">
-  Join the Pilots of Arelplane <a href="https://www.facebook.com/groups/arelplane" target="_blank">Facebook Group</a>! Give feedback, request features, ask questions.
+  Support Arelplane on <a href="https://www.patreon.com/arelplane" target="_blank">Patreon</a>! We're 100% community funded.
 </div>
 <div class="alert alert-primary" role="alert">
   Copy clearances? Order <a href="https://amzn.to/2MN2BuY">Pilot notepads!</a> <b>(now on Prime!)</b>
