--- a/app/views/stories/_card.html.erb
+++ b/app/views/stories/_card.html.erb
@@ -74,7 +74,7 @@
     <% if story.flights.any? %>
       <div class="row">
         <div class="col-12">
-          <%= link_to(image_tag(story.map_image_url, class: 'card-img-top', alt: 'Story map', onerror: "this.error=null;this.src='#{image_path('placeholderMap.png')}'"), username_path(story.user.username)) unless story.map_image_url.blank? %>
+          <%= link_to(image_tag(story.map_image_url, class: 'card-img-top', alt: 'Story map', onerror: "this.error=null;this.src='#{image_path('placeholderMap.png')}'"), story_path(story)) unless story.map_image_url.blank? %>
         </div>
       </div>
       <% if story.flights.count == 1 %>
